# ftp

./: LICENSE  README.md
ftp-client/: CMakeLists.txt  ftp_client.sln  ftp_client.vcxproj  ftp_client.vcxproj.filters
ftp-client/src/: BS_thread_pool.cpp  BS_thread_pool.h  client.c  client_commands.c  client_commands.h  connect_to_server.c  mutex_.cpp  mutex_.h  nicaddr.c  socket.c  socket.h  usleep_.h
ftp-server/: CMakeLists.txt  ftp_server.sln  ftp_server.vcxproj  ftp_server.vcxproj.filters
ftp-server/src/: BS_thread_pool.hpp  dprintf_.c  dprintf_.h  filesystem_.cpp  filesystem_.h  ktnyt_thread_pool.h  listen_for_client.c  manage_client.c  nicaddr.h  request.h  server.c  server_command.c  server_command.h  socket.c  socket.h  usleep_.cpp  usleep_.h
